<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>AGCraftPlugins</groupId>
  <artifactId>AGCraftPlugins</artifactId>
  <version>1.8.0</version>
  <name>AGCraftPlugins</name>
  <description>A suite of plugins used for the AGCraft Minecraft server!</description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
  	<repository>
	    <id>papermc</id>
	    <url>https://papermc.io/repo/repository/maven-public/</url>
	</repository>
  </repositories>
  <properties>
    <powermock.version>2.0.2</powermock.version>
  </properties>
  <dependencies>
	<dependency>
	    <groupId>org.yaml</groupId>
	    <artifactId>snakeyaml</artifactId>
	    <version>1.26</version>            
	</dependency>
	<dependency>
	    <groupId>io.papermc.paper</groupId>
	    <artifactId>paper-api</artifactId>
	    <version>1.17-R0.1-SNAPSHOT</version>
	    <scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>org.spigotmc</groupId>
		<artifactId>spigot</artifactId>
		<version>1.17.1-R0.1-SNAPSHOT</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
    	<groupId>org.xerial</groupId>
    	<artifactId>sqlite-jdbc</artifactId>
    	<version>3.34.0</version>
	</dependency>
	<dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-core</artifactId>
    	<version>2.21.0</version>
	</dependency>
		<!-- PowerMock TestNG Module -->
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-testng</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- PowerMock JUnit 4.4+ Module -->
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
		</dependency>
		<!-- PowerMock Mockito2 API -->
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>${powermock.version}</version>
		</dependency>
  </dependencies>
</project>